--- a/src/main/java/algorithms/sort/排序算法.md
+++ b/src/main/java/algorithms/sort/排序算法.md
@@ -299,6 +299,98 @@ public static Comparable select(Comparable[] array, int k) {
 
 # 堆排序
 
+## 1.堆
+最大堆：堆中某个节点的值总是大于等于其子节点的值，并且是一棵完全二叉树
+ 
+堆可以用数组来表示，这是因为堆是完全二叉树，而完全二叉树很容易就存储在数组中。
+
+堆有如下性质： 
+
+a、 当i=0时，该节点为根
+
+b、当i>0时，该节点的双亲的序号为(i-1)/2
+
+c、当2i+1<n，则该节点的左孩子的序号为2i+1，否则无左孩子
+
+d、当2i+2<n，则该节点的右孩子的序号为2i+2，否则无右孩子
+
+## 2. 上浮和下沉
+
+```java
+/**
+* 上浮 在堆中当一个节点比父节点大的时候，需要交换这两个节点，交换后可能比 它新的父节点大，
+* 因为需要不断进行比较和交换操作。这种操作称为上浮
+* 已知子节点求父节点  (k - 1)/2
+*/
+private static void swim(Comparable[] array, int k) {
+    while (k > 0 && less(array[k - 1 / 2], array[k])) {
+        exec(array, k - 1 / 2, k);
+        k = k - 1 / 2;
+    }
+}
+
+private static void sink(Comparable[] array, int k, int length) {
+    //k为下沉的数，length为数组对的长度
+    //index为0的时候，左子节点为2*k + 1
+    while (2 * k + 1 < length) {
+        int leftChild = 2 * k + 1;
+        //判断左右节点哪个比较大
+        if (leftChild + 1 <= length - 1 && less(array[leftChild], array[leftChild + 1])) {
+            leftChild++;
+        }
+        //如果节点不比子节点大的小直接退出
+        if (!less(array[k], array[leftChild])) {
+            break;
+        }
+        //交换父节点与较大子节点的位置
+        exec(array, leftChild, k);
+        //继续下沉交换的节点
+        k = leftChild;
+    }
+}
+```
+## 3. 插入元素
+将数组放到数组末尾，然后上浮到合适的位置
+
+## 4. 删除最大元素
+从数组顶端删除最大的元素，并将数组的最后一个元素放到顶端，并让这个元素下沉到合适的位置
+
+## 5. 堆排序
+思想：把最大元素和当前堆中数组的最后一个元素交换位置，并且不删除它，那么久可以得到一个从尾倒头的递减序列，从正向来看就是一个递增序列，这就是堆排序。
+
+#### 5.1 构建堆
+无序数组建立堆最直接的方法是从左到右遍历数组进行上浮操作。一个更高效的方法是从右至左进行下沉操作，如果一个节点的两个节点都已经是堆有序，那么进行下沉操作可以使得这个节点为根节点的堆有序。叶子节点不需要进行下沉操作，可以忽略叶子节点的元素，因此只需要遍历一半的元素即可。
+
+#### 5.2 交换堆顶元素与最后一个元素
+交换之后需要进行下沉操作维持堆的有序状态
+
+```java
+public class Heap extends BaseSort {
+
+    @Override
+    protected void sort(Comparable[] array) {
+        int length = array.length;
+        //已知子节点求父节点
+        for (int k = (length - 1 ) / 2 ; k >= 0; k--) {
+            sink(array, k, length);
+        }
+        for (int j = length - 1; j > 0; j--) {
+            exec(array, 0, j);
+            sink(array, 0, j);
+        }
+    }
+}
+```
+## 6.分析
+一个堆的高度为 logN，因此在堆中插入元素和删除最大元素的复杂度都为 logN。
+
+对于堆排序，由于要对 N 个节点进行下沉操作，因此复杂度为 NlogN。
+
+堆排序是一种原地排序，没有利用额外的空间。
+
+现代操作系统很少使用堆排序，因为它无法利用局部性原理进行缓存，也就是数组元素很少和相邻的元素进行比较和交换。
+
+
 # 小结
 
 ## 1. 排序算法的比较
